@@ -37,6 +37,16 @@ configurations {
     implementation {
         resolutionStrategy.failOnVersionConflict()
     }
+    testCompileClasspath {
+        attributes {
+            attribute(TargetJvmVersion.TARGET_JVM_VERSION_ATTRIBUTE, 22)
+        }
+    }
+    testRuntimeClasspath {
+        attributes {
+            attribute(TargetJvmVersion.TARGET_JVM_VERSION_ATTRIBUTE, 22)
+        }
+    }
 }
 
 sourceSets {
@@ -50,7 +60,7 @@ java {
     targetCompatibility = JavaVersion.VERSION_21
 
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(22)
     }
 
     withSourcesJar()
@@ -59,7 +69,6 @@ java {
 
 tasks.test {
     useJUnitPlatform()
-    jvmArgs("--enable-preview")
 
     systemProperty(
         "jna.library.path", listOf(
@@ -86,10 +95,6 @@ tasks.test {
     }
 
     finalizedBy(tasks.jacocoTestReport)
-}
-
-tasks.named<JavaCompile>("compileTestJava") {
-    options.compilerArgs.add("--enable-preview")
 }
 
 tasks.jacocoTestReport {
