@@ -38,6 +38,16 @@ configurations {
     implementation {
         resolutionStrategy.failOnVersionConflict()
     }
+    testCompileClasspath {
+        attributes {
+            attribute(TargetJvmVersion.TARGET_JVM_VERSION_ATTRIBUTE, 22)
+        }
+    }
+    testRuntimeClasspath {
+        attributes {
+            attribute(TargetJvmVersion.TARGET_JVM_VERSION_ATTRIBUTE, 22)
+        }
+    }
 }
 
 sourceSets {
@@ -51,7 +61,7 @@ java {
     targetCompatibility = JavaVersion.VERSION_21
 
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(22)
     }
 
     withSourcesJar()
@@ -60,7 +70,6 @@ java {
 
 tasks.test {
     useJUnitPlatform()
-    jvmArgs("--enable-preview")
 
     systemProperty(
         "jna.library.path", listOf(
@@ -87,10 +96,6 @@ tasks.test {
     }
 
     finalizedBy(tasks.jacocoTestReport)
-}
-
-tasks.named<JavaCompile>("compileTestJava") {
-    options.compilerArgs.add("--enable-preview")
 }
 
 tasks.jacocoTestReport {
